fix overflow

--- a/builder.css
+++ b/builder.css
@@ -81,6 +81,7 @@
 	padding: 16px;
 	position: relative;
 	z-index: 1;
+	overflow: hidden;
 }
 
 .house-element-btn {
